--- a/Basic_Programming_Concepts.ipynb
+++ b/Basic_Programming_Concepts.ipynb
@@ -72,9 +72,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FuxV7IAtD02T",
-        "outputId": "1a732f64-6b99-4605-d14a-a938000b2daf"
+        "outputId": "7b978968-ad98-447a-ea72-9c8c28714830"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,9 +95,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lwE0P085D0zG",
-        "outputId": "4e101df6-f478-41c9-a811-e039ac4e18bd"
+        "outputId": "b3362cc4-6693-4936-c342-7150c6ea2ced"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -107,7 +107,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -145,7 +145,7 @@
       "metadata": {
         "id": "T1SwjUsiDzow"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
       "metadata": {
         "id": "JNws0MGlDzg7"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -182,9 +182,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mLHwTEGiDzd7",
-        "outputId": "8f96f4e2-63d2-4d7b-cde0-3649186c29de"
+        "outputId": "5435a569-9fff-454f-ecf3-610617a9b222"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,16 +215,16 @@
           "height": 131
         },
         "id": "rm0nhmHeDzaj",
-        "outputId": "55429a05-71bd-419b-fd05-c9eb26ef9152"
+        "outputId": "0d5f0290-21e1-4fba-f25f-74220c95de7e"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-07a0750214a8>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def function_a():\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-07a0750214a8>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def function_a():\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
           ]
         }
       ]
@@ -247,7 +247,7 @@
       "metadata": {
         "id": "ik5FyttBDzXy"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -260,9 +260,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1PjEoA-uDzU_",
-        "outputId": "b277b96c-829e-44c4-aa69-b243c653af85"
+        "outputId": "6e0665e1-56ae-480d-9b8d-3f0e8daf2b4c"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,9 +283,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sLMZG-KQKcHU",
-        "outputId": "49fa318e-e365-474e-a60b-fceaf6ce46f2"
+        "outputId": "03bfac2f-4845-4c98-93a8-a5cc7b747a80"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
       "metadata": {
         "id": "3zKkSXWFKghw"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -329,9 +329,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XrZeH87fO1i_",
-        "outputId": "540dde4c-7c8b-4840-c66c-0d634d653240"
+        "outputId": "47057370-9f37-4b45-d55a-a2154612d50f"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,9 +354,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iLNEG71ZO1gK",
-        "outputId": "304e74d8-ac41-4585-c43e-79d232cee7a8"
+        "outputId": "f9f97e31-ec01-414f-d57c-d000af036b14"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,9 +377,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P7S7sAA9PXyN",
-        "outputId": "241b5ac6-cf17-47bc-9e9a-5eb036deea0a"
+        "outputId": "3977f018-3306-4cd8-dd01-1168c10b365a"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,9 +400,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V3n3VuB_O1da",
-        "outputId": "e30eb94a-11ba-4aab-ab41-dbd083414469"
+        "outputId": "f46b5346-1e62-415c-f748-1334916f20fd"
       },
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +441,7 @@
       "metadata": {
         "id": "ygU4MSqbO1aU"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -454,9 +454,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JlcXZyMvRVQs",
-        "outputId": "d52148cc-7f22-4375-9a9a-5eaa50310634"
+        "outputId": "78e9682b-4769-4018-c264-68fb2798cdc9"
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,9 +478,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mhpcGajzRrqT",
-        "outputId": "88ab7e37-cc22-4c22-ea93-f6e0861708c1"
+        "outputId": "4e6cc90f-4734-40a4-fd2f-575d3da89cc3"
       },
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -502,9 +502,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u3QHMqUaRw3U",
-        "outputId": "c9a26228-3df9-471c-8a76-132419b684b3"
+        "outputId": "caf22c71-5520-4976-ed38-965b025a462d"
       },
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,9 +548,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ErPNmt1wTQ3l",
-        "outputId": "413c1b3f-7ca2-4f66-ee7a-aa8d114bc17c"
+        "outputId": "bb65cc22-2980-4a5b-bbd4-b6bf72abc935"
       },
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,7 +575,7 @@
       "metadata": {
         "id": "OjXbkUvQU1H3"
       },
-      "execution_count": 21,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -590,9 +590,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O_PQSREoUn-6",
-        "outputId": "4b220410-6bdc-4a8a-c1f4-e86267b2d8a7"
+        "outputId": "f18c7167-333a-4612-aa43-e588cd5b14dd"
       },
-      "execution_count": 22,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -617,7 +617,7 @@
       "metadata": {
         "id": "HSqTdVfKWQhi"
       },
-      "execution_count": 23,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -635,9 +635,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hnz7HqbRXJId",
-        "outputId": "03aae24c-5dfe-4c3d-abc2-284806b7e896"
+        "outputId": "9ae41965-f0ab-4d5e-e1ab-37d2973d5f7a"
       },
-      "execution_count": 24,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -679,7 +679,7 @@
       "metadata": {
         "id": "ap0A83G3YRLF"
       },
-      "execution_count": 25,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -692,9 +692,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hiq0wvZgY6GM",
-        "outputId": "22294462-82b6-4610-b056-9d6b8be77bf3"
+        "outputId": "a7e2914f-c9ed-4d47-a741-a2e16b086cb6"
       },
-      "execution_count": 26,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -704,7 +704,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 25
         }
       ]
     },
@@ -728,9 +728,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HxXoQFZbbVpT",
-        "outputId": "ea12f59a-c6a1-4bdb-b087-9a626ff369b6"
+        "outputId": "dba89750-4bed-45ae-e282-4bc1c4ce2fd6"
       },
-      "execution_count": 27,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -764,9 +764,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JpnID7pKcOpu",
-        "outputId": "8d0351ae-6e75-44a3-cf18-6f6cce7a2ddd"
+        "outputId": "518d36c8-a18f-4ca7-c551-b5ffd8c87b77"
       },
-      "execution_count": 28,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -837,7 +837,7 @@
       "metadata": {
         "id": "Egjjd5fecOew"
       },
-      "execution_count": 29,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -850,9 +850,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XiZ_FbtecP5P",
-        "outputId": "940ca33d-cf8f-4301-9e8e-880ff9b52dbd"
+        "outputId": "02f8da3d-7404-4efe-b392-3e0c033cf669"
       },
-      "execution_count": 30,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,9 +904,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WBifeHsJcP1v",
-        "outputId": "127c7228-8217-4494-971f-46a1f0d1f227"
+        "outputId": "7bcca2b1-6c85-4751-af6d-21c37fa8cf37"
       },
-      "execution_count": 31,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -938,12 +938,12 @@
       ],
       "metadata": {
         "id": "sw23UdfnkASr",
-        "outputId": "ca0ca9eb-e421-40fd-d95b-2cf952e400e3",
+        "outputId": "6e7223fc-4a3d-450a-df0e-d6c09a7f60ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -965,9 +965,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MpOwImpecOYE",
-        "outputId": "a9294534-48cc-4365-8750-7bc1dda8441e"
+        "outputId": "35f9d532-86cd-41a6-b953-56adb5ddaec8"
       },
-      "execution_count": 33,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -987,7 +987,7 @@
       "metadata": {
         "id": "88Hoo4AgcOTs"
       },
-      "execution_count": 34,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1001,9 +1001,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M7ye6epncOGL",
-        "outputId": "0459a55f-4d80-40d3-8d6e-d3262767de7d"
+        "outputId": "09af3956-f05d-4964-8abf-510aaef9f96c"
       },
-      "execution_count": 35,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -1016,7 +1016,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 35,
       "metadata": {
         "id": "gdx9D1eADPXK"
       },
@@ -1034,12 +1034,12 @@
       ],
       "metadata": {
         "id": "-_K6tNsklY0O",
-        "outputId": "acb0de15-60d1-4e44-f32e-aea7fb69f15b",
+        "outputId": "df40da94-d06e-4c5c-db91-095b943bca92",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -1082,41 +1082,17 @@
       "metadata": {
         "id": "xUUhDR3GldrZ"
       },
-      "execution_count": 1,
+      "execution_count": 37,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(input)\n",
-        "for h in input:\n",
-        "    if type(h) == type(\"\"):\n",
-        "        print (f'คะแนน {h} ไม่สามารถตัดเกรดได้')\n",
-        "    else:\n",
-        "        if i >= 101:\n",
-        "            print (f'คะแนน {h} ไม่สามารถตัดเกรดได้')\n",
-        "        elif i >= 80:\n",
-        "            print (f'คะแนน {h} ได้เกรด  A')\n",
-        "        elif i >= 75:\n",
-        "            print (f'คะแนน {h} ได้เกรด  B+')\n",
-        "        elif i >= 70:\n",
-        "            print (f'คะแนน {h} ได้เกรด  B')\n",
-        "        elif i >= 65:\n",
-        "            print (f'คะแนน {h} ได้เกรด  C+')\n",
-        "        elif  i >= 60:\n",
-        "            print (f'คะแนน {h} ได้เกรด  C')\n",
-        "        elif  i >= 55:\n",
-        "            print (f'คะแนน {h} ได้เกรด  D+')\n",
-        "        elif  i >= 50:\n",
-        "            print (f'คะแนน {h} ได้เกรด  D')\n",
-        "        elif  i >= 0:\n",
-        "            print (f'คะแนน {h} ได้เกรด  F')\n",
-        "        else:\n",
-        "            print (f'คะแนน {h} ไม่สามารถตัดเกรดได้')"
+        "'ก' is not int()"
       ],
       "metadata": {
-        "id": "L572-ag3dtDO",
-        "outputId": "c68e2993-3718-42f3-ae4e-9dc57b841713",
+        "id": "oP-uTITxab0b",
+        "outputId": "d82ef440-49c4-45fd-c2ad-2b414e8b6a57",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1124,22 +1100,173 @@
       "execution_count": 39,
       "outputs": [
         {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type('')"
+      ],
+      "metadata": {
+        "id": "uJ4e0cHiadfb",
+        "outputId": "d9926121-7e2d-4693-97de-f3006c87cf12",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def grading(x):\n",
+        "    if type(x) is int:  \n",
+        "        if x < 0:\n",
+        "            y =f'คะแนน {x} ไม่สามารถตัดเกรดได้'\n",
+        "        elif x < 50:\n",
+        "            y = f'คะแนน {x} ได้เกรด F'\n",
+        "        elif x < 55:\n",
+        "            y = f'คะแนน {x} ได้เกรด D'\n",
+        "        elif x < 60:\n",
+        "            y = f'คะแนน {x} ได้เกรด D+'\n",
+        "        elif x < 65:\n",
+        "            y = f'คะแนน {x} ได้เกรด C'\n",
+        "        elif x < 70:\n",
+        "            y = f'คะแนน {x} ได้เกรด C+'\n",
+        "        elif x < 75:\n",
+        "            y = f'คะแนน {x} ได้เกรด B'\n",
+        "        elif x < 80:\n",
+        "            y = f'คะแนน {x} ได้เกรด B+'\n",
+        "        elif x <= 100:\n",
+        "            y = f'คะแนน {x} ได้เกรด A'\n",
+        "        else:\n",
+        "            y =f'คะแนน {x} ไม่สามารถตัดเกรดได้'\n",
+        "    else:\n",
+        "        y =f'คะแนน {x} ไม่สามารถตัดเกรดได้'\n",
+        "    \n",
+        "    return y"
+      ],
+      "metadata": {
+        "id": "w_R2TzBYaiJj"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(1) is int"
+      ],
+      "metadata": {
+        "id": "4LFYGIdVakdT",
+        "outputId": "fbc3ed3c-552e-4166-8838-23e7faedcdf1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(1) is int"
+      ],
+      "metadata": {
+        "id": "vq9Ff8e4amfq",
+        "outputId": "2456624a-b006-4657-cfd0-ff87cf1977e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in input:\n",
+        "    print(grading(i))"
+      ],
+      "metadata": {
+        "id": "uhiX79ToapQ7",
+        "outputId": "48dd1402-b5bd-493a-da4b-b1e5fae27278",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[1, 50, 65, 90, 101, -5, 49, 'ก', 80]\n",
-            "คะแนน 1 ได้เกรด  F\n",
-            "คะแนน 50 ได้เกรด  F\n",
-            "คะแนน 65 ได้เกรด  F\n",
-            "คะแนน 90 ได้เกรด  F\n",
-            "คะแนน 101 ได้เกรด  F\n",
-            "คะแนน -5 ได้เกรด  F\n",
-            "คะแนน 49 ได้เกรด  F\n",
+            "คะแนน 1 ได้เกรด F\n",
+            "คะแนน 50 ได้เกรด D\n",
+            "คะแนน 65 ได้เกรด C+\n",
+            "คะแนน 90 ได้เกรด A\n",
+            "คะแนน 101 ไม่สามารถตัดเกรดได้\n",
+            "คะแนน -5 ไม่สามารถตัดเกรดได้\n",
+            "คะแนน 49 ได้เกรด F\n",
             "คะแนน ก ไม่สามารถตัดเกรดได้\n",
-            "คะแนน 80 ได้เกรด  F\n"
+            "คะแนน 80 ได้เกรด A\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "8yuiZAkqapj6"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
